# reports-exports

./: .gitignore  .tool-versions  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8b6b12623791_init.py  beed5532e1d9_init.py
backend/app/: main.py
backend/app/alembic/: aaa.txt
backend/app/api/: router.py
backend/app/api/routes/: exports.py
backend/app/core/: config.py  exceptions.py  security.py
backend/app/db/: mixins.py  session.py
backend/app/db/models/: __init__.py  base_model.py  export_job.py  user.py
backend/app/schemas/: aaa.txt
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: export_tasks.py
docs/: git-patterns.md
